# agent-skills

./: .env.example  .gitignore  =2.0  BOUNDED_AUTONOMY_SUMMARY.md  CHANGELOG.md  COMPLETE_WORKFLOW_GUIDE.md  Contract-First Regression Root Cause Analysis.md  Makefile  QUICKSTART_TRANSLATE.md  QUICK_REFERENCE.md  README.md  RUN_SKILLS_GUIDE.md  STRUCTURE.md  TRANSLATION_SETUP.md  WORKFLOW_FLOWCHART.md  agent-skills-bounded-autonomy-spec.yaml  debug_parsed.py  docker-compose.yml  example.py  explore_bounded_autonomy.py  interactive_translate_test.py  main.py  pyproject.toml  quick_translate.sh  quickstart.sh  registry.yaml  requirements.txt  skill-dev-cheatsheet.sh  test_op_extraction.py  test_ops_extraction.py  test_real_translation.py  test_resource_extraction.py  tmp_test_timeout.py  verify_all_fixes.py
avidflow-back/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LOCAL_GPT_TEST_PAYLOADS.json  LOCAL_GPT_TROUBLESHOOTING.md  README.md  ROLLBACK_COMPLETE.md  SLACK_NODE_IMPLEMENTATION.md  alembic.ini  celery_app.py  config.py  docker-compose.stage.yml  docker-compose.yml  fix_first_workflow.py  github-sample-workflow.json  main.py  manage.py  pyproject.toml  requirements.in  requirements.txt  server.py  stage_oauth_test_inline.py  test_agent_input.py  test_cleanup_greenlet_edge_cases.py  test_embedding_match.py  test_local_gpt_endpoints.fish  test_memory_autoclear.py  test_memory_fix.py  test_oauth_stage.sh  update_local_gpt_workflow.py  update_local_gpt_workflow.sh  verify_n8n_mechanism.py
avidflow-back/.github/: copilot-instructions.md
avidflow-back/alembic/: env.py
avidflow-back/auth/: dependencies.py  rate_limit.py  utils.py
avidflow-back/command/: init_credential_types.py
avidflow-back/commands/: __init__.py  base.py  createsuperuser.py  init_credential_types.py  sync_nodes.py  test_oauth_refresh.py
avidflow-back/config/: node_access.yaml  node_plans.yaml
avidflow-back/credentials/: __init__.py  __init__.py.backup  airtableApi.py  baleApi.py  base.py  cohereApi.py  deepseekApi.py  facebookGraphApi.py  facebookGraphAppApi.py  facebookLeadAdsOAuth2Api.py  geminiApi.py  gitlabApi.py  gmailOAuth2Api.py  googleCalendarApi.py  googleDocsApi.py  googleDriveApi.py  googleFormApi.py  googleOAuth2Api.py  googleSheetsApi.py  grokApi.py  hesabfaTokenApi.py  httpBasicAuth.py  httpHeaderAuth.py  kavenegarApi.py  linkedinApi.py  localGptApi.py  mysqlApi.py  neshanApi.py  oAuth2Api.py  oauth1Api.py  openAiApi.py  openProjectApi.py  posgtresApi.py  postgresApi.py  qdrantApi.py  qwenApi.py  redisApi.py  sakuyMeliApi.py  shopifyAccessTokeApi.py  shopifyApi.py  (+10 more)
avidflow-back/database/: admin2.py  config.py  crud.py  models.py
avidflow-back/docs/: AI_CODE_REVIEW_GUIDELINES.md  STAGING_ENVIRONMENT_GUIDE.md  SUBSCRIPTION_LOGIC_CHANGES.md  VIP_NODE_ACCESS_DEPLOYMENT.md
avidflow-back/engine/: execution.py
avidflow-back/models/: __init__.py  auth.py  base.py  connection.py  credential.py  execution.py  node.py  payment.py  user.py  workflow.py
avidflow-back/nodes/: __init__.py  ai_agent.py  airtable.py  baleTrigger.py  base.py  chat.py  deepseek.py  document_default_data_loader.py  embeddings_openai.py  end.py  filtering.py  form_submission_trigger.py  gemini.py  gitlab-original.py  gitlab.py.broken.bak  gmail.py  gmail_trigger.py  googleCalendar.py  googleDocs.py  googleDrive.py  googleForm.py  googleSheets.py  grok.py  hesabfa.py  htmlExtractor.py  http_request.py  if_node.py  iterator.py  kavenegar.py  linkedin.py  local_gpt.py  loop.py  mcpClientTool.py  merge.py  mysql.py  neshan.py  openProject.py  openai.py  postgres.py  qdrantVectorStore.py  (+23 more)
avidflow-back/observability/: __init__.py  langfuse_client.py
avidflow-back/payman/: __init__.py  utils.py  wrapper.py
avidflow-back/routers/: admin_node_access.py  auth.py  chat.py  credentials.py  dashboard.py  executions.py  form_submission.py  node_types.py  oauth2.py  payments.py  tools.py  user.py  webhook.py  websocket.py  workflow.py
avidflow-back/scripts/: seed_credential.py  stage_oauth_test.py  test_oauth_refresh.py  verify_rabbitmq_events.py
avidflow-back/services/: auth.py  cache.py  dynamic_node_access.py  error_handler.py  file_storage.py  node_access.py  queue.py  redis_manager.py  scheduler.py  sms.py  workflow_message_consumer.py  workflow_message_handler.py
avidflow-back/tasks/: __init__.py  sms.py  workflow.py
avidflow-back/tests/: load_test_node_access.py  run_buffer_memory_tests.py  test_buffer_memory_stress.py  test_dynamic_node_access.py  test_google_oauth_refresh.py  test_memory_integration.py  test_node_access.py  test_subscription_limits.py
avidflow-back/utils/: agent_events.py  ai_agent_args.py  ai_agent_text.py  ai_agent_tool_ops.py  ai_agent_tooling.py  cohere_client.py  common_params.py  connection_resolver.py  embedding_providers.py  encryption.py  execution_data.py  expression_evaluator.py  googleCalendar_norm.py  inline_exec.py  langchain_agents.py  langchain_base.py  langchain_chat_models.py  langchain_memory.py  langchain_retrievers.py  langchain_tools.py  llm_messages.py  mcp_handler.py  mcp_transport.py  model_registry.py  node_loader.py  persian_text.py  provider_meta.py  qdrant_client.py  qdrant_exceptions.py  qdrant_models.py  qdrant_retriever.py  reranker_base.py  retriever_tool_wrapper.py  (+9 more)
(+1461 files in other folders)
